<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Language Translator</string>
    <string name="addPhrases">Add Phrases</string>
    <string name="displayPhrases">Display Phrases</string>
    <string name="editPhrases">Edit Phrases</string>
    <string name="languageSubscription">Language Subscription</string>
    <string name="translate">Translate</string>
    <string name="pronounce">Pronounce</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="display">Display</string>
    <string name="hint">Enter a word or a phrase</string>
    <string name="hint2">Edit text here</string>
    <string name="phrase">Phrase</string>
    <string name="id">01</string>
    <string name="language_translator_apikey">W4YyYQ0XBvr5t8lELeq_yuU7i5JfujdNzwsk_36HluCi</string>
    <string name="language_translator_url" tools:ignore="TypographyDashes">https://api.eu-gb.language-translator.watson.cloud.ibm.com/instances/d6569f41-ab17-4737-b9a7-f7480f3bf29f</string>
    <string name="text_speech_apikey">f8zLwrUiwNNBK5Dp7L7cywALcOLZtGhILUEEBl4kGgdh</string>
    <string name="text_speech_url">https://api.eu-gb.text-to-speech.watson.cloud.ibm.com/instances/528cdb2d-b0b4-4a75-a7b0-7588503354d0</string>
</resources>
