<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/appBg">

    <Button
        android:id="@+id/addPhrases"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="nextPage"
        android:text="@string/addPhrases"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editPhrases"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="nextPage2"
        android:text="@string/editPhrases"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/languageSubscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />

    <Button
        android:id="@+id/scroll"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="nextPage1"
        android:text="@string/displayPhrases"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editPhrases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhrases" />

    <Button
        android:id="@+id/languageSubscription"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="nextPage3"
        android:text="@string/languageSubscription"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/translate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhrases" />

    <Button
        android:id="@+id/translate"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="nextPage4"
        android:text="@string/translate"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageSubscription"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>